--- a/vcastplay-cms/src/app/components/playlist/add-to-playlist/add-to-playlist.component.html
+++ b/vcastplay-cms/src/app/components/playlist/add-to-playlist/add-to-playlist.component.html
@@ -2,7 +2,7 @@
     <p-table
         #playlistsTable
         [value]="playlists()"
-        [(selection)]="selectedPlaylists"
+        [(selection)]="selectedArrPlaylist"
         (selectionChange)="onSelectionChange($event)"
         dataKey="id"
         [scrollable]="true" 
