--- a/vcastplay-cms/src/app/components/playlist/playlist-list-item/playlist-list-item.component.html
+++ b/vcastplay-cms/src/app/components/playlist/playlist-list-item/playlist-list-item.component.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <ng-template #footer>
-        <div class="text-end">
+        <div class="flex justify-end gap-2">
             <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: playlist }"></ng-container>
         </div>
     </ng-template>
