--- a/vcastplay-cms/src/app/components/filters/filters.component.html
+++ b/vcastplay-cms/src/app/components/filters/filters.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="filters" class="flex flex-row gap-4 justify-between mb-5">
+<form [formGroup]="filters" class="flex flex-row gap-4 justify-between">
     <p-input-group>
         <input pInputText placeholder="Search" formControlName="keywords" />
         <p-inputgroup-addon>
