--- a/vcastplay-cms/src/app/components/roles/role-list-item/role-list-item.component.html
+++ b/vcastplay-cms/src/app/components/roles/role-list-item/role-list-item.component.html
@@ -3,7 +3,7 @@
         <h6 class="font-semibold">{{ item.name }}</h6>
         <p>{{ item.description }}</p>
     </div>
-    <div class="flex flex-row">
+    <div class="flex gap-2">
         <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
     </div>
 </div>
