--- a/vcastplay-cms/src/app/components/users/user-list-item/user-list-item.component.html
+++ b/vcastplay-cms/src/app/components/users/user-list-item/user-list-item.component.html
@@ -4,7 +4,7 @@
         <h6 class="font-semibold">{{ user.firstName }} {{ user.lastName }}</h6>
         <p>{{ user.email }}</p>
     </div>
-    <div class="flex flex-row">
+    <div class="flex gap-2">
         <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: user }"></ng-container>
     </div>
 </div>
