--- a/vcastplay-cms/src/app/pages/assets/asset-list/asset-list.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-list/asset-list.component.html
@@ -13,115 +13,121 @@
                     </p-selectbutton>
                 </div>
                 <div class="flex items-center gap-4 hidden lg:block">
+                    <!-- @if (selectedArrAssets().length > 1) {
+                        <p-button (onClick)="onClickAddMultipleToPlaylist($event)" icon="pi pi-list" label="Add to Playlist" />
+                    } -->
                     <p-button (onClick)="onClickAddNew()" label="Upload" icon="pi pi-plus"></p-button>
                 </div>
             </div>
         </ng-template>
         
-        
-        <div class="hidden lg:flex justify-center items-center border-dashed border-2 border-zinc-300 p-5 rounded-lg cursor-pointer hover:bg-zinc-100 mb-8" 
-            (drop)="onDropFile($event)" (dragover)="onDragOver($event)" (dragleave)="onDragLeave($event)" (click)="fileInput.click()">
-            <p class="text-gray-500"><span class="font-semibold">Drop files here</span> or click to upload</p>
-            <input type="file" multiple (change)="onFileSelect($event)" hidden #fileInput />
-        </div>
-
-        <div class="relative block lg:hidden px-3 gap-4" [ngClass]="{ 
-            'grid grid-cols-2 md:grid-cols-3 gap-4': assetViewModeSignal() == 'Grid',
-            'flex flex-col gap-2': assetViewModeSignal() == 'List'
-        }">
-            <div class="flex items-center justify-center border-dashed border-2 border-gray-400 p-5 
-                rounded-lg cursor-pointer hover:bg-gray-100" (click)="onClickAddNew()">
-                <div class="flex flex-col gap-4 items-center justify-center">
-                    <i class="pi pi-plus-circle text-gray-400" style="font-size: 2rem;"></i>
-                    <p>Upload</p>
-                </div>
+        <div class="flex flex-col gap-4 h-full">
+            <div class="hidden lg:flex justify-center items-center border-dashed border-2 border-zinc-300 p-5 rounded-lg cursor-pointer hover:bg-zinc-100" 
+                (drop)="onDropFile($event)" (dragover)="onDragOver($event)" (dragleave)="onDragLeave($event)" (click)="fileInput.click()">
+                <p class="text-gray-500"><span class="font-semibold">Drop files here</span> or click to upload</p>
+                <input type="file" multiple (change)="onFileSelect($event)" hidden #fileInput />
             </div>
-            @for (item of filteredAssets(); track $index) {
-                <app-asset-list-item [asset]="item" [disableDrag]="true" [showOptions]="true" [actionBtn]="actionBtn" />
-            }
-        </div>
 
-        <div class="flex-1">
-            <p-table
-                class="hidden lg:block" 
-                [value]="assetService.loadingSignal() ? utils.tableSkeletonRows : filteredAssets()" 
-                selectionMode="single"
-                [scrollable]="true" 
-                [rows]="rows()"
-                [first]="first()"
-                scrollHeight="flex-1"
-                size="small"
-                (onPage)="assetService.onPageChange($event)"
-                stripedRows
-                paginator
-            >
-                <ng-template #header>
-                    <tr>
-                        <th [style]="{ width: '80px' }">Preview</th>
-                        <th>Name</th>
-                        <th>Type</th>
-                        <th>Orientation</th>
-                        <th>Category & Sub Category</th>
-                        <th>Duration</th>
-                        <th>Last Update</th>
-                        <th>
-                            <div class="text-center">Actions</div>
-                        </th>
-                    </tr>
-                </ng-template>
-                <ng-template #body let-item>
-                    <tr class="text-sm">
-                        <td>
-                            <div class="relative h-15">
-                                <div class="absolute top-0 left-0 w-full h-full flex items-center justify-center">
-                                    @if(['video', 'image'].includes(item.type)) {
-                                        <img [src]="item.fileDetails.thumbnail" class="max-h-full object-contain" alt="Image">
-                                    } @else {
-                                        @switch (item.type) {
-                                            @case('audio') { <i class="pi pi-volume-up" [style]="{ 'font-size': '2rem'}"></i> }
-                                            @case('web') { <i class="pi pi-globe" [style]="{ 'font-size': '2rem'}"></i> }
-                                            @case('widget') { <i class="pi pi-layout" [style]="{ 'font-size': '2rem'}"></i> }
+            <div class="relative block lg:hidden px-3 gap-4 overflow-y-auto h-120" [ngClass]="{ 
+                'grid grid-cols-2 md:grid-cols-3 gap-4': assetViewModeSignal() == 'Grid',
+                'flex flex-col gap-2': assetViewModeSignal() == 'List'
+            }">
+                <div class="flex items-center justify-center border-dashed border-2 border-gray-400 p-5 
+                    rounded-lg cursor-pointer hover:bg-gray-100" (click)="onClickAddNew()">
+                    <div class="flex flex-col gap-4 items-center justify-center">
+                        <i class="pi pi-plus-circle text-gray-400" style="font-size: 2rem;"></i>
+                        <p>Upload</p>
+                    </div>
+                </div>
+                @for (item of filteredAssets(); track $index) {
+                    <app-asset-list-item [asset]="item" [disableDrag]="true" [showOptions]="true" [actionBtn]="actionBtn" />
+                }
+            </div>
+            
+            <div class="flex-1 min-h-0 hidden lg:block">
+                <p-table
+                    [value]="assetService.loadingSignal() ? utils.tableSkeletonRows : filteredAssets()"
+                    selectionMode="single"
+                    [scrollable]="true" 
+                    [rows]="rows()"
+                    [first]="first()"
+                    scrollHeight="flex"
+                    size="small"
+                    (onPage)="assetService.onPageChange($event)"
+                    stripedRows
+                    paginator
+                >
+                    <ng-template #header>
+                        <tr>
+                            <!-- <th style="width: 4rem"><p-tableHeaderCheckbox /></th> -->
+                            <th [style]="{ width: '80px' }">Preview</th>
+                            <th>Name</th>
+                            <th>Type</th>
+                            <th>Orientation</th>
+                            <th>Category & Sub Category</th>
+                            <th>Duration</th>
+                            <th>Last Update</th>
+                            <th>
+                                <div class="text-center">Actions</div>
+                            </th>
+                        </tr>
+                    </ng-template>
+                    <ng-template #body let-item>
+                        <tr class="text-sm">
+                            <!-- <td><p-tableCheckbox [value]="item" /></td> -->
+                            <td>
+                                <div class="relative h-15">
+                                    <div class="absolute top-0 left-0 w-full h-full flex items-center justify-center">
+                                        @if(['video', 'image'].includes(item.type)) {
+                                            <img [src]="item.fileDetails.thumbnail" class="max-h-full object-contain" alt="Image">
+                                        } @else {
+                                            @switch (item.type) {
+                                                @case('audio') { <i class="pi pi-volume-up" [style]="{ 'font-size': '2rem'}"></i> }
+                                                @case('web') { <i class="pi pi-globe" [style]="{ 'font-size': '2rem'}"></i> }
+                                                @case('widget') { <i class="pi pi-layout" [style]="{ 'font-size': '2rem'}"></i> }
+                                            }
                                         }
-                                    }
+                                    </div>
                                 </div>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="flex flex-col gap-1">
-                                <p class="font-semibold">{{ item.name }}</p>
-                                <div class="flex gap-2">
-                                    <p class="text-sm italic">{{ utils.formatSize(item?.fileDetails.size ?? 0) }}</p>
-                                    <p class="text-sm italic">({{ item?.fileDetails.resolution?.width ?? 0 }} x {{ item.fileDetails.resolution?.height ?? 0 }})</p>
+                            </td>
+                            <td>
+                                <div class="flex flex-col gap-1">
+                                    <p class="font-semibold">{{ item.name }}</p>
+                                    <div class="flex gap-2">
+                                        <p class="text-sm italic">{{ utils.formatSize(item?.fileDetails.size ?? 0) }}</p>
+                                        <p class="text-sm italic">({{ item?.fileDetails.resolution?.width ?? 0 }} x {{ item.fileDetails.resolution?.height ?? 0 }})</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </td>
-                        <td><p-tag [value]="item.type.toUpperCase()" severity="info" /></td>
-                        <td><p class="text-sm font-medium">{{ item.fileDetails?.orientation?.toUpperCase() ?? '-' }}</p></td>
-                        <td>
-                            @if (!item.category || !item.subCategory) {
-                                <p class="text-sm text-red-500 italic">No category available</p>
-                            } @else {
-                                {{ item.category }} & {{ item.subCategory }}
-                            }
-                        </td>
-                        <td>{{ utils.timeConversion(item.duration) }}</td>
-                        <td>{{ item.updatedOn | date: 'mediumDate' }}</td>
-                        <td>
-                            <div class="flex flex-row gap-2 items-center justify-center">
-                                <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
-                            </div>
-                        </td>
-                    </tr>
-                </ng-template>
-                <ng-template #emptymessage>
-                    <tr>
-                        <td colspan="9" [height]="20">
-                            <div class="flex justify-center p-5"><p class="italic">No Data found</p></div>
-                        </td>
-                    </tr>
-                </ng-template>
-            </p-table>
+                            </td>
+                            <td><p-tag [value]="item.type.toUpperCase()" severity="info" /></td>
+                            <td><p class="text-sm font-medium">{{ item.fileDetails?.orientation?.toUpperCase() ?? '-' }}</p></td>
+                            <td>
+                                @if (!item.category || !item.subCategory) {
+                                    <p class="text-sm text-red-500 italic">No category available</p>
+                                } @else {
+                                    {{ item.category }} & {{ item.subCategory }}
+                                }
+                            </td>
+                            <td>{{ utils.timeConversion(item.duration) }}</td>
+                            <td>{{ item.updatedOn | date: 'mediumDate' }}</td>
+                            <td>
+                                <div class="flex flex-row gap-2 items-center justify-center">
+                                    <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
+                                </div>
+                            </td>
+                        </tr>
+                    </ng-template>
+                    <ng-template #emptymessage>
+                        <tr>
+                            <td colspan="9" [height]="20">
+                                <div class="flex justify-center p-5"><p class="italic">No Data found</p></div>
+                            </td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+            </div>
         </div>
+        
         <!-- <ng-template #footer>
             <p-paginator [rows]="rows" [totalRecords]="totalRecords"></p-paginator>
         </ng-template> -->
@@ -141,7 +147,7 @@
         <div class="flex items-center w-full">
             <p class="text-sm text-red-500 italic">{{ selectedArrPlaylist().length }} playlist(s) selected</p>
             <div class="flex gap-2 ml-auto">
-                <p-button label="Close" severity="secondary" (onClick)="isShowAddToPlaylist.set(false)" />
+                <p-button label="Close" severity="secondary" (onClick)="onClickCancelSaveToPlaylist()" />
                 <p-button label="Save" (onClick)="onClickSaveToPlaylist($event)" [disabled]="selectedArrPlaylist().length == 0" />
             </div>
         </div>
